--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Allocation Tracker",
   "short_name": "Allocations",
   "description": "Track your monthly hire purchase and mortgage allocations",
-  "start_url": "/",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#4F46E5",
