--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,25 @@
 {
-  "name": "Allocation Tracker",
-  "short_name": "Mawar&Alphard",
-  "description": "Track monthly hire purchase and mortgage allocations",
-  "start_url": "./",
-  "scope": "./",
-  "display": "standalone",
-  "background_color": "#667eea",
-  "theme_color": "#4F46E5",
-  "orientation": "portrait",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ]
-}
+     "name": "Allocation Tracker",
+     "short_name": "Allocations",
+     "description": "Track monthly hire purchase and mortgage allocations",
+     "start_url": "./",
+     "scope": "./",
+     "display": "standalone",
+     "background_color": "#667eea",
+     "theme_color": "#4F46E5",
+     "orientation": "portrait",
+     "icons": [
+       {
+         "src": "icon-192.png",
+         "sizes": "192x192",
+         "type": "image/png",
+         "purpose": "any maskable"
+       },
+       {
+         "src": "icon-512.png",
+         "sizes": "512x512",
+         "type": "image/png",
+         "purpose": "any maskable"
+       }
+     ]
+   }
